--- a/src/app/views/journey/journey.component.css
+++ b/src/app/views/journey/journey.component.css
@@ -2,7 +2,23 @@
     /* display: flex; */
     margin: 100px auto 32px;
     padding: 0 16px;
-    max-width: 960px;
+    max-width: 860px;
     flex-direction: column;
     align-items: center;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+button {
+    width: 100%;
+}
+
+.content-center {
+    padding: 8px 0px 0px 10px;
+}
+
+.mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
 }
